<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/_10sdp"
    android:background="@color/white"
    tools:context=".activity.home.HomeActivity">

    <include layout="@layout/activity_home"/>

    <LinearLayout
        android:id="@+id/navigation_view_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/profile_rel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_20sdp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_nav_img"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                app:civ_border_color="@color/colorPrimary"
                android:clickable="false"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_new_user"
                app:civ_border_width="2px" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_nav_img"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textSize="@dimen/text_18"
                android:text=""
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_user_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textSize="@dimen/text_16"
                android:text=""
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/textChild" />


            <TextView
                android:id="@+id/tv_user_shop_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_user_mobile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textSize="@dimen/text_16"
                android:text=""
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/textChild" />

        </RelativeLayout>

        <View
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            style="@style/ViewLineMenu"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                //profile
                <LinearLayout
                    android:id="@+id/profile_li"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profile_txt"
                        android:text="@string/lbl_profile"
                        android:drawableLeft="@drawable/ic_account"
                        style="@style/MenuOption" />

                </LinearLayout>

                //Promote yourself
                <LinearLayout
                    android:id="@+id/promote_yourself_li1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/promote_yourself_txt1"
                        android:text="@string/lbl_promote_ur_self"
                        android:drawableLeft="@drawable/ic_progress"
                        style="@style/MenuOption" />

                </LinearLayout>

                //Promotions
                <LinearLayout
                    android:id="@+id/promotions_li1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/promotions_txt1"
                        android:text="@string/lbl_manage_promotions"
                        android:drawableLeft="@drawable/ic_promotion"
                        style="@style/MenuOption" />

                </LinearLayout>

                //Promo Performance
                <LinearLayout
                    android:id="@+id/promo_performance_li1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/promo_performance_txt1"
                        android:text="@string/lbl_promo_performance"
                        android:drawableLeft="@drawable/ic_discount_voucher"
                        style="@style/MenuOption" />

                </LinearLayout>

                //My Transactions
                <LinearLayout
                    android:id="@+id/my_transactions_li1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/my_transactions_txt1"
                        android:text="@string/lbl_my_transactions"
                        android:drawableLeft="@drawable/ic_wallet"
                        style="@style/MenuOption" />

                </LinearLayout>

                //swayam_package
                <LinearLayout
                    android:id="@+id/swayam_package_li1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/swayam_package_txt1"
                        android:text="@string/lbl_swayam_package"
                        android:drawableLeft="@drawable/ic_swayam_package"
                        style="@style/MenuOption" />

                </LinearLayout>

                //Refer and Earn
                <LinearLayout
                    android:id="@+id/refer_and_earn_li1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/refer_and_earn_txt1"
                        android:text="@string/lbl_refer_and_earn"
                        android:drawableLeft="@drawable/ic_money_bag"
                        style="@style/MenuOption" />

                </LinearLayout>

                //share app
                <LinearLayout
                    android:id="@+id/share_app_li1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/share_app_txt1"
                        android:text="@string/lbl_share_app"
                        android:drawableLeft="@drawable/ic_share"
                        style="@style/MenuOption" />

                </LinearLayout>

                //Contact Us
                <LinearLayout
                    android:id="@+id/contact_us_li1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/contact_us_txt1"
                        android:text="@string/lbl_contact_us"
                        android:drawableLeft="@drawable/ic_contact_us"
                        style="@style/MenuOption" />

                </LinearLayout>

                //About Us
                <LinearLayout
                    android:id="@+id/about_us_li1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_us_txt1"
                        android:text="@string/lbl_about_us"
                        android:drawableLeft="@drawable/ic_info"
                        style="@style/MenuOption" />

                </LinearLayout>

                //logout
                <LinearLayout
                    android:id="@+id/logout_li1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/logout_txt1"
                        android:text="@string/lbl_logout"
                        android:drawableLeft="@drawable/ic_sign_out"
                        style="@style/MenuOption" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>




</androidx.drawerlayout.widget.DrawerLayout>
