<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/li_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:background="@color/white"
        android:layout_margin="@dimen/_2sdp"
        android:elevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/no_of_ads"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/lbl_my_transactions"
                android:textColor="@color/textHeader"
                android:textSize="@dimen/text_10" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@color/grey"/>

            <TextView
                android:id="@+id/date_promoted"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/lbl_date"
                android:textColor="@color/textHeader"
                android:textSize="@dimen/text_10" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@color/grey"/>

            <TextView
                android:id="@+id/package_choose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/lbl_package_choose"
                android:textColor="@color/textHeader"
                android:textSize="@dimen/text_10" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@color/grey"/>

            <TextView
                android:id="@+id/sent_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/lbl_sent_to"
                android:textColor="@color/textHeader"
                android:textSize="@dimen/text_10" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@color/grey"/>

            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/lbl_amount"
                android:textColor="@color/textHeader"
                android:textSize="@dimen/text_10" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>