<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.product.MoreSubCatogoryActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_43sdp"
        android:elevation="@dimen/_5sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_back_arrow"
            app:tint="@color/textHeader" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivBack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:singleLine="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/lbl_FancyCosmeticShop"
            android:textColor="@color/textHeader"
            android:textSize="@dimen/text_18" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/choose_category"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_14"
                android:layout_marginTop="@dimen/_10sdp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/more_sub_catergory_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:id="@+id/txt_1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/contact_shape_black_deselected"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_weight="1"
                    android:shadowColor="@color/blue"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_gravity="center_vertical"
                    android:text="@string/beauty_products"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp"/>

                <TextView
                    android:id="@+id/txt_2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_weight="1"
                    android:background="@drawable/contact_shape_black_deselected"
                    android:fontFamily="@font/roboto_regular"
                    android:shadowColor="@color/blue"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_gravity="center_vertical"
                    android:text="@string/jewelries"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_10sdp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5sdp">

                <TextView
                    android:id="@+id/txt_3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/contact_shape_black_deselected"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_weight="1"
                    android:shadowColor="@color/blue"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_gravity="center_vertical"
                    android:text="@string/cosmetic_products"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp"/>

                <TextView
                    android:id="@+id/txt_4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_weight="1"
                    android:background="@drawable/contact_shape_black_deselected"
                    android:fontFamily="@font/roboto_regular"
                    android:shadowColor="@color/blue"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_gravity="center_vertical"
                    android:text="@string/accessories"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_14"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_10sdp"/>


            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/next_business_img"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/bg_circle_shape"
        android:backgroundTint="@color/colorPrimary"
        android:padding="@dimen/_8sdp"
        android:rotation="180"
        android:elevation="@dimen/_5sdp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/ic_back_arrow"
        app:tint="@color/white" />

    <include layout="@layout/loading_layout"/>

</RelativeLayout>